# MidWayContrib

MidWayShellServer/: CAVEAT_EMPTOR  EXAMPLE  Makefile  README  mw_shell_server.c  testservice.pl
jMidWay/: .classpath  .project  Makefile  Makefile.in  TestServer.java  config.status  configure  configure.in  test.java  test1.java  testlog-mem-error
jMidWay/autom4te.cache/: output.0  requests  traces.0
jMidWay/native/: Makefile  Makefile.in  jMidWay.c  jMidWay.h
jMidWay/org/: Makefile
jMidWay/org/midway/: CallReply.java  CallRequester.java  IEventListener.java  Makefile  Makefile.in  MidWay.java  MidWayException.java  ServiceInfo.java  TestServer.java
java-MidWay/src/org/midway/: Event.java  ICallListener.java  MidWay.java  MidWayCallRequester.java  MidWayEventListener.java  ServiceInfo.java  ServiceProvider.java
java-MidWay/src/org/midway/impl/: IMidWayImpl.java  MidWayImplHelper.java
java-MidWay/src/org/midway/impl/java/: Log.java  MidWayJavaImpl.java  MidWayPendingReply.java  NonNull.java  SRBConnectionEndPoint.java  SRBMessage.java  Timber.java
java-MidWay/src/org/midway/impl/jna_native/: MidWayCImpl.java
perl-MidWay/: .gitignore  Changes  MANIFEST  Makefile  Makefile.PL  MidWay.c  MidWay.xs  README  diff  event.pl  test.pl
perl-MidWay/blib/lib/: MidWay.pm  task.pl  testclient.pl
perl-MidWay/blib/lib/auto/MidWay/: autosplit.ix
perl-MidWay/blib/man3/: MidWay.3pm
pyMidWay/: BUGS  Changes  MANIFEST  README  midway.c  setup.py  test.py  testevents.py  testserv.py
